--- a/Supervised Machine Learning/Logistic-Regression.ipynb
+++ b/Supervised Machine Learning/Logistic-Regression.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "premier-feeding",
-   "metadata": {},
+   "execution_count": 16,
+   "id": "committed-stewart",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:04.721766Z",
+     "iopub.status.busy": "2021-04-13T15:37:04.721647Z",
+     "iopub.status.idle": "2021-04-13T15:37:04.737362Z",
+     "shell.execute_reply": "2021-04-13T15:37:04.736596Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:04.721752Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -14,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "dedicated-daughter",
-   "metadata": {},
+   "execution_count": 17,
+   "id": "departmental-sight",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:05.743641Z",
+     "iopub.status.busy": "2021-04-13T15:37:05.743470Z",
+     "iopub.status.idle": "2021-04-13T15:37:05.765752Z",
+     "shell.execute_reply": "2021-04-13T15:37:05.765059Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:05.743626Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -25,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-methodology",
+   "id": "elementary-relationship",
    "metadata": {},
    "source": [
     "## Generating DataSet\n",
@@ -37,9 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "adapted-ensemble",
-   "metadata": {},
+   "execution_count": 18,
+   "id": "senior-abortion",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:06.148054Z",
+     "iopub.status.busy": "2021-04-13T15:37:06.147909Z",
+     "iopub.status.idle": "2021-04-13T15:37:06.153561Z",
+     "shell.execute_reply": "2021-04-13T15:37:06.152498Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:06.148040Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.datasets import make_regression\n",
@@ -48,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "liberal-giving",
-   "metadata": {},
+   "execution_count": 19,
+   "id": "modular-harris",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:06.440225Z",
+     "iopub.status.busy": "2021-04-13T15:37:06.440076Z",
+     "iopub.status.idle": "2021-04-13T15:37:06.455933Z",
+     "shell.execute_reply": "2021-04-13T15:37:06.455475Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:06.440211Z"
+    }
+   },
    "outputs": [],
    "source": [
     "x, y = make_regression(n_samples=100, n_features=1, noise=10, random_state=33)\n",
@@ -64,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contained-gender",
+   "id": "clinical-leonard",
    "metadata": {},
    "source": [
     "## Linear Regression\n",
@@ -73,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "positive-brother",
-   "metadata": {},
+   "execution_count": 20,
+   "id": "addressed-rating",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:08.162418Z",
+     "iopub.status.busy": "2021-04-13T15:37:08.162256Z",
+     "iopub.status.idle": "2021-04-13T15:37:08.173994Z",
+     "shell.execute_reply": "2021-04-13T15:37:08.172001Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:08.162404Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
@@ -87,9 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "id": "accurate-blast",
-   "metadata": {},
+   "execution_count": 21,
+   "id": "frequent-winning",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:08.328433Z",
+     "iopub.status.busy": "2021-04-13T15:37:08.328226Z",
+     "iopub.status.idle": "2021-04-13T15:37:08.429169Z",
+     "shell.execute_reply": "2021-04-13T15:37:08.428820Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:08.328418Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -97,7 +145,7 @@
        "Text(0, 0.5, 'Income in thousands')"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -123,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "close-michigan",
+   "id": "hired-consolidation",
    "metadata": {},
    "source": [
     "## Classification\n",
@@ -136,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "offensive-organ",
+   "id": "framed-evans",
    "metadata": {},
    "source": [
     "### Create a binary version of Y"
@@ -144,9 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "aggressive-patrick",
-   "metadata": {},
+   "execution_count": 22,
+   "id": "running-valentine",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:13.129921Z",
+     "iopub.status.busy": "2021-04-13T15:37:13.129752Z",
+     "iopub.status.idle": "2021-04-13T15:37:13.133168Z",
+     "shell.execute_reply": "2021-04-13T15:37:13.132267Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:13.129907Z"
+    }
+   },
    "outputs": [],
    "source": [
     "y_copy = y.copy()\n",
@@ -156,17 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "driven-drama",
-   "metadata": {},
+   "execution_count": 23,
+   "id": "responsible-parts",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:13.268931Z",
+     "iopub.status.busy": "2021-04-13T15:37:13.268767Z",
+     "iopub.status.idle": "2021-04-13T15:37:13.348776Z",
+     "shell.execute_reply": "2021-04-13T15:37:13.348393Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:13.268917Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fe0152f7e50>"
+       "<matplotlib.collections.PathCollection at 0x7fd5392a95e0>"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -189,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "variable-settle",
+   "id": "floppy-nightmare",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -197,9 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "precious-teach",
-   "metadata": {},
+   "execution_count": 24,
+   "id": "proof-quarter",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-04-13T15:37:13.896777Z",
+     "iopub.status.busy": "2021-04-13T15:37:13.896633Z",
+     "iopub.status.idle": "2021-04-13T15:37:13.899605Z",
+     "shell.execute_reply": "2021-04-13T15:37:13.898842Z",
+     "shell.execute_reply.started": "2021-04-13T15:37:13.896764Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression"
@@ -207,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "premium-pride",
+   "execution_count": 11,
+   "id": "married-director",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +289,7 @@
        "LogisticRegression(solver='liblinear')"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "announced-startup",
+   "id": "binary-baker",
    "metadata": {},
    "source": [
     "The above statement creates an instance of LogisticRegression and binds its references to the variable model. LogisticRegression has several optional parameters that define the behavior of the model and approach:\n",
@@ -240,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "concrete-favor",
+   "execution_count": 12,
+   "id": "worse-swing",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +322,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "norman-visiting",
+   "id": "partial-clause",
    "metadata": {},
    "source": [
     "We can quickly get the attributes of your model. For example, the attribute .classes_ represents the array of distinct values that y takes:"
@@ -269,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjacent-testimony",
+   "id": "final-arcade",
    "metadata": {},
    "source": [
     "###  Evaluate the Model"
@@ -278,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "voluntary-pound",
+   "id": "prepared-tomato",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "supreme-purpose",
+   "id": "moral-aruba",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "instant-limitation",
+   "id": "elder-birthday",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laden-shirt",
+   "id": "changing-shelf",
    "metadata": {},
    "source": [
     "In the matrix above, each row corresponds to a single observation. The first column is the probability of the predicted output being zero, that is 1 - 𝑝(𝑥). The second column is the probability that the output is one, or 𝑝(𝑥)."
@@ -342,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "hindu-monkey",
+   "id": "alert-ambassador",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "latest-singapore",
+   "id": "olympic-shadow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "parliamentary-hammer",
+   "id": "sensitive-acrobat",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civilian-essex",
+   "id": "inappropriate-procedure",
    "metadata": {},
    "source": [
     "## Evaluating Model Performance\n",
@@ -409,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "spanish-china",
+   "id": "heated-metro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "amateur-article",
+   "id": "broadband-coordination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "warming-class",
+   "id": "humanitarian-samoa",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "global-shelter",
+   "id": "dried-crisis",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +555,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exterior-coating",
+   "id": "running-routine",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "still-nowhere",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "affiliated-aurora",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "obvious-victoria",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "median-reservoir",
    "metadata": {},
    "outputs": [],
    "source": []
